# robust_cnns

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
config/: config.yaml
config/attack/: pgd.yaml
config/data/: cifar10.yaml
config/method/: trades.yaml  weight_perturbation.yaml
config/model/: resnet18.yaml
config/scheduler/: cosine.yaml
notebooks/: adversarial_training.ipynb
src/: __main__.py
src/attacks/: attacks.py  pgd.py
src/data/: loader.py
src/evaluation/: attacks.py  evaluator.py  main_evaluation.py  metrics.py  visualizations.py
src/models/: resnet18.py
src/training/: base_trainer.py  losses.py  train.py
src/training/methods/: adversarial_training.py  randomized_smoothing.py  trades.py  weight_averaging.py  weight_perturbation.py
src/utils/: logging.py
tests/: test_evaluation.py  test_training.py
