[tool.poetry]
name = "robust-cnns"
version = "0.1.0"
description = ""
authors = ["Ayesha Khan <ayeshakhan.mct@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
autoattack = {git = "https://github.com/fra31/auto-attack"}
statsmodels = "^0.14.4"
numpy = "^1.26.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
