[tool.poetry]
name = "robust-cnns"
version = "0.1.0"
description = ""
authors = ["Ayesha Khan <ayeshakhan.mct@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.6.0"  # Compatible version
torchvision = "0.21.0"  # Compatible version
autoattack = {git = "https://github.com/fra31/auto-attack"}
statsmodels = "^0.14.4"
numpy = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"